monticore-generator/src/test/resources/cocos/invalid/A0276/A0276.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A0276;

grammar A0276 {

  external A;

}
